tests/ui/item-is-invalid.stderr
error: expected `:`, found `,`
 --> tests/ui/item-is-invalid.rs:5:6
  |
4 | union A {
  |       - while parsing this union
5 |     B,
  |      ^ expected `:`

error: item syntax is invalid
 --> tests/ui/item-is-invalid.rs:3:1
  |
3 | #[bitsize(5)]
  | ^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `bitsize` (in Nightly builds, run with -Z macro-backtrace for more info)
