tests/ui/item-is-invalid.rs
use bilge::bitsize;

#[bitsize(5)]
union A {
    B,
}

fn main() {}
